2013-02-21  Werner Koch  <wk@gnupg.org>

	* base/pwpolicy.c (policy_checking_failed): New.
	(parse_pattern_line): Split error messages into a log message and
	a shorter version for the user.
	(openvas_validate_password): Ditto.

2013-02-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING: Added module pwpolicy.

2013-02-20  Werner Koch  <wk@gnupg.org>

	* base/pwpolicy.c: New.  Taken from openvas-administrator.
	* base/pwpolicy.h: New.
	* base/CMakeLists.h: Add new files.

	* base/CMakeLists.txt: Change -D OPENVAS_SYSCONFDIR to
	OPENVAS_SYSCONF_DIR for consistency.
	* base/gpgme_util.c (determine_gpghome): Adjust for this change.
	* nasl/CMakeLists.txt: Change -D OPENVAS_SYSCONFDIR to
	OPENVAS_SYSCONF_DIR for consistency.  It is not used anyway.

	* misc/openvas_server.c (openvas_server_open): Print host and port
	in debug and warning messages.

2013-02-19  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 6.0+beta5.

2013-02-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* CHANGES: Updated.

2013-02-19  Michael Wiegand <michael.wiegand@greenbone.net>

	Move "-Werror" flag to the "Debug" build type.

	* misc/CMakeLists.txt, omp/CMakeLists.txt, nasl/CMakeLists.txt,
	hg/CMakeLists.txt, base/CMakeLists.txt: Move "-Werror" from
	CMAKE_C_FLAGS to CMAKE_C_FLAGS_DEBUG to keep it out of the "Release"
	build type.

	* CMakeLists.txt: Do not set any flags as this is currently handled by
	the individual CMakeLists.txt in the subdirectories.

2013-02-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Deperecating "script_dependencie" which is some very old
	work around for typos that happend when trying to spell
	"script_dependencies".

	* nasl/nasl_init.c (libfuncs): Removed "script_dependencie",
	renamed mapping to "script_dependencies".

	* nasl_scanner_glue.c (script_dependencie): Renamed to
	script_dependencies.

	* nasl_scanner_glue.h: Adjusted proto accordingly.
