@@ -1,5 +1,8 @@
 2013-02-21  Werner Koch  <wk@gnupg.org>
 
+	* base/nvticache.c (nvticache_get_by_oid): Take care of a NULL
+	used for CACHE.
+
 	* base/pwpolicy.c (policy_checking_failed): New.
 	(parse_pattern_line): Split error messages into a log message and
 	a shorter version for the user.
